<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvFistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/firstName" />

    <EditText
        android:id="@+id/etPatientFistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvFistName"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPatientFistName"
        android:layout_marginTop="16dp"
        android:text="@string/lastName" />

    <EditText
        android:id="@+id/etAddPatientLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvLastName"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etAddPatientLastName"
        android:layout_marginTop="16dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etAddPatientEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvEmail"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tvProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etAddPatientEmail"
        android:layout_marginTop="16dp"
        android:text="@string/problem" />

    <EditText
        android:id="@+id/etAddPatientProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvProblem"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etAddPatientProblem"
        android:layout_marginTop="16dp"
        android:text="@string/gender" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvGender"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbWoman"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/rbMan"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="@string/woman" />

    </RadioGroup>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_create" />
</RelativeLayout>