<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recoderbuttons"
                android:layout_marginTop="15dp"
                android:text="@string/description" />

            <EditText
                android:id="@+id/exerciseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView14"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/exerciseTitle"
                android:layout_marginTop="10dp"
                android:text="@string/enddate" />

            <EditText
                android:id="@+id/etPickDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvDate"
                android:focusable="false"
                android:inputType="date" />

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/etPickDate"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp" />

            <Button
                android:id="@+id/button_image"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_alignBottom="@+id/imageview"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="takePicture"
                android:text="@string/take_picture" />

            <EditText
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvDescription"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="6" />

            <TextView
                android:id="@+id/checkhelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button_image"
                android:layout_marginTop="15dp"
                android:text="@string/help" />

            <Switch
                android:id="@+id/help_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageview"
                android:layout_alignStart="@+id/imageview"
                android:layout_alignTop="@+id/checkhelp" />

            <TextView
                android:id="@+id/voicerecorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/checkhelp"
                android:layout_marginTop="15dp"
                android:text="@string/record" />

            <LinearLayout
                android:id="@+id/recoderbuttons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/voicerecorder"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/start" />

                <Button
                    android:id="@+id/btnStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/stop" />

                <Button
                    android:id="@+id/btnPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/play" />

            </LinearLayout>


        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_action_name" />
</RelativeLayout>
