<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.strost.logopedist.controller.activities.admin.CaregiverActivity">

    <TextView
        android:id="@+id/tvCaregiverFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/caregiver_firstName" />

    <EditText
        android:id="@+id/etCaregiverFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvCaregiverFirstName"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvCaregiverLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etCaregiverFirstName"
        android:text="@string/caregiver_lastName" />

    <EditText
        android:id="@+id/etCaregiverLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvCaregiverLastName"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvCaregiverEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCaregiverLastName"
        android:layout_marginTop="16dp"
        android:text="@string/caregiver_email" />

    <EditText
        android:id="@+id/etCaregiverEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCaregiverEmail"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tvCargiverActivated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etCaregiverEmail"
        android:layout_marginTop="16dp"
        android:text="@string/activated" />

    <Switch
        android:id="@+id/swtchCaregiverActivated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvCargiverActivated" />

    <TextView
        android:id="@+id/tvCargiverIsAdimn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/swtchCaregiverActivated"
        android:layout_marginTop="16dp"
        android:text="@string/administrator" />

    <Switch
        android:id="@+id/swtchCaregiverIsAdimn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvCargiverIsAdimn" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabChangeCaregiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_create" />

</RelativeLayout>
